vlib/v/checker/tests/void_fn_multiple_ret_err.vv
fn foo() ! {
	return none, 100
}

fn foo2() ? {
	return none, 100
}
